Closed Bug 1874777 Opened 1 year ago Closed 1 year ago

Permanent test_no_expired_metrics.py failure starting with Firefox 124: do_task.implementation - version increase on 2024-01-22

Categories

(Toolkit :: Default Browser Agent, defect)

defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
thunderbird_esr115 --- unaffected
firefox-esr115 --- unaffected
firefox121 --- unaffected
firefox122 --- unaffected
firefox123 --- unaffected
firefox124 --- fixed

People

(Reporter: aryx, Assigned: aryx)

References

(Regression)

Details

(Keywords: regression)

Bug 1871512 added the telemetry probe do_task.implementation which expires with the version increase to 124 on Jan 22nd.

To ship the probe, it cannot be removed before mozilla-central merges to mozilla-beta. The version gets increased directly afterwards and will trigger the permanent failure in mozilla-central.

If the probe shall be removed in 124, could you provide a patch for it this week and code sheriffs can land it next Monday?

If you want to keep it for longer, please renew the probe this week.

Flags: needinfo?(nrishel)

:aryx would it be sufficient to point to the revision to revert?

Flags: needinfo?(nrishel) → needinfo?(aryx.bugmail)

Okay, I will revert everything from 1871512 on central after the merge to beta next Monday.

Flags: needinfo?(aryx.bugmail)
Pushed by archaeopteryx@coole-files.de: https://hg.mozilla.org/integration/autoland/rev/8c5016fab484 backed out bug 1871512 because probe `do_task.implementation` is not needed anymore.
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
Assignee: nobody → aryx.bugmail
You need to log in before you can comment on or make changes to this bug.