Bug 1874777 - backed out bug 1871512 because probe `do_task.implementation` is not needed anymore.