toolkit/mozapps/defaultagent/Telemetry.cpp
@@ -449,10 +449,9 @@ HRESULT MaybeWritePreviousNotificationAction(
 }
 
 // Sends Firefox Desktop and Glean telemetry for the Default Agent in parallel.
-HRESULT SendDefaultAgentPing(const DefaultBrowserInfo& browserInfo,
-                             const DefaultPdfInfo& pdfInfo,
-                             const NotificationActivities& activitiesPerformed,
-                             const nsACString& doTaskImpl) {
+HRESULT SendDefaultAgentPing(
+    const DefaultBrowserInfo& browserInfo, const DefaultPdfInfo& pdfInfo,
+    const NotificationActivities& activitiesPerformed) {
   std::string currentDefaultBrowser =
       GetStringForBrowser(browserInfo.currentDefaultBrowser);
   std::string currentDefaultPdf =
@@ -565,8 +564,6 @@ HRESULT SendDefaultAgentPing(const DefaultBrowserInfo& browserInfo,
         nsDependentCString(previousDefaultBrowser.c_str()));
     mozilla::glean::system_default::pdf_handler.Set(
         nsDependentCString(currentDefaultPdf.c_str()));
-
-    mozilla::glean::do_task::implementation.Set(doTaskImpl);
 
     return SendDesktopTelemetryPing(
                currentDefaultBrowser, previousDefaultBrowser, currentDefaultPdf,
